INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/net)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(test1 test1.cc)
TARGET_LINK_LIBRARIES(test1 muduo_net)

ADD_EXECUTABLE(test2 test2.cc)
TARGET_LINK_LIBRARIES(test2 muduo_net)

ADD_EXECUTABLE(test3 test3.cc)
TARGET_LINK_LIBRARIES(test3 muduo_net)